--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "gray-matter": "^4.0.3",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
