--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "gray-matter": "^4.0.3",
     "next": "14.2.6",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
