--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
