--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -28,14 +26,22 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
+    "rehype": "^13.0.1",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-class-names": "^2.0.0",
     "rehype-external-links": "^3.0.0",
     "rehype-highlight": "^7.0.0",
     "rehype-katex": "^7.0.1",
+    "rehype-parse": "^9.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "remark-rehype": "^11.1.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "unified": "^11.0.5"
   }
 }
