--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "image-size": "^1.1.1",
     "next": "14.2.6",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
